examples/datalog/18_advanced_patterns/101_ratio_calculation.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_ratio
Knowledge graph 'test_ratio' created.
Switched to knowledge graph: test_ratio
> .kg use test_ratio
Switched to knowledge graph: test_ratio
> +parts[(1, "A", 30), (2, "A", 20), (3, "B", 50), (4, "B", 25), (5, "B", 25)].
Inserted 5 fact(s) into 'parts'.
> sum_per_cat(Cat, <SUM:Val>) :- parts(_, Cat, Val).
Script error: Parse error: Unknown aggregate function: 
